--- a/home.html
+++ b/home.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="sacdep.css">
 </head>
 <body>
     <h1>9:00 AM - create home page</h1>
+    <h2>sydeptraine</h2>
 </body>
 </html>
